--- a/Web/Alert/AlertMessage.resx
+++ b/Web/Alert/AlertMessage.resx
@@ -126,6 +126,9 @@
   <data name="Workflow_DefaultPrint" xml:space="preserve">
     <value>"The document has been Printed."</value>
   </data>
+  <data name="Workflow_FDPReceipt_EditedParam1" xml:space="preserve">
+    <value>"{1) has been edited."</value>
+  </data>
   <data name="Workflow_LossEntry" xml:space="preserve">
     <value>"Loss Entry has been made for this Document."</value>
   </data>
